add getmodel-Endpoint
