# app/node-backend/routes/api.js
@@ -14,6 +14,14 @@ const apiSpecPath = path.join(__dirname, './../openapi.json');
 // JOI is used for precised validation
 const {CLASSIFY_SCHEMA, validate_input} = require("../validation_schemes/classify_schemas");
 
+// Init dictionary to save modelpaths
+const fs = require('fs');
+let modelFolder = "./models";
+let modelPathDict = {};
+let id_count = 0;
+// FOR TESTING:
+let testmodel = './model.Rda';
+
 // ----------------- Middleware --------------------
 
 // Checks if request fits to OpenAPI-specification
@@ -57,11 +65,12 @@ ROUTER.post('/classify', function(req, res)
     }
     else
     {
-      //request-body an R-backend weiterleiten und ggf. darauf anpassen
+      // request-body an R-backend weiterleiten und ggf. darauf anpassen
+      let id = saveModelFile(testmodel);
       let dummyResult = {
-        "Model": "id",
+        "Model": id,
         "Model-Result": {
-          //classes, propabilities, ...
+          // classes, propabilities, ...
         }
       }
       res.setHeader('Content-Type', 'application/json');
@@ -70,9 +79,56 @@ ROUTER.post('/classify', function(req, res)
   } 
   catch (error) 
   {
-    console.error('Fehler beim Abrufen der Stationen:', error)
+    console.error('Fehler beim Abrufen der Klassifikation:', error)
     res.status(500).json({ message: 'Interner Serverfehler' })
   }
 });
+
+ROUTER.get('/getmodel', function(req, res) 
+{
+  const searchId = req.query.id;
+  try
+  {
+    // Search modelPath in Dictionary
+    let modelPath = modelPathDict[searchId];
+    res.setHeader('Content-Type', 'application/Rda');
+    res.send(modelPath); // TODO: Send data not Path
+  }
+  catch (err)
+  {
+    res.status(404).json({ message: 'Id not found' })
+  }
+});
+
+// ------------------- help-functions ----------------------------
+
+/**
+ * Save Modelfile in ModelPath and give it an id and name to find it
+ * 
+ * @param {*} rda_file - model to be saved
+ * @returns {int} - id of model
+ */
+function saveModelFile(rda_file) 
+{
+  // Give model id and name
+  let id = ++id_count;
+  let modelName = "model_" + id.toString() + ".Rda"; 
+  const modelPath = path.join(modelFolder, modelName);
+
+  // Save model in modelPath
+  fs.copyFile(rda_file, modelPath, function (err) 
+  {
+    if (err) {
+      console.error('Error in model save', err);
+    } else {
+      console.log('Successful model save.');
+    }
+  });
+
+  // Save model-id and -path in dict
+  modelPathDict[id] = modelPath;
+
+  return id;
+}
 
 module.exports = ROUTER;
